--- a/index.html
+++ b/index.html
@@ -34,10 +34,7 @@
 
 
             <div class="banner">
-                <p>This is <strong>Phase Shift</strong>, a responsive HTML5 site template freebie by <a href="https://templated.co/">TEMPLATED</a>.
-                Released for free under the <a href="https://templated.co/license">Creative Commons Attribution</a> license, so use it for whatever 
-                (personal or commercial) – just give us credit! Check out more of our stuff at <a href="https://templated.co/">our site</a> or follow us on <a href="https://twitter.com/templatedco">Twitter</a>.
-                </p>
+                <p>Lorem ipsum <strong>PhaseShift</strong> dolor sit amet, consectetur adipiscing elit. Pellentesque lectus nunc, fermentum et lacinia pulvinar, hendrerit sit amet purus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac.</p>
 
                 <div class="banner-btn">READ MORE</div>
             </div>
