--- a/index.html
+++ b/index.html
@@ -1,198 +1,276 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>PhaseShift Practice Site</title>
-        <link href="https://fonts.googleapis.com/css?family=Raleway:100,200,300,400,500,600,700,800,900&display=swap" rel="stylesheet">
-        <script src="https://kit.fontawesome.com/0841a5b684.js"></script>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-        <link rel="stylesheet" type="text/css" href="main.css">  
-    </head>
+  <head>
+    <title>PhaseShift Practice Site</title>
+    <link
+      href="https://fonts.googleapis.com/css?family=Raleway:100,200,300,400,500,600,700,800,900&display=swap"
+      rel="stylesheet"
+    />
+    <script src="https://kit.fontawesome.com/0841a5b684.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    />
+    <link rel="stylesheet" type="text/css" href="main.css" />
+  </head>
 
-    <body>
-        <header class="flex">
+  <body>
+    <header class="flex">
+      <div class="menu"><i class="fas fa-bars"></i></div>
 
-            <div class="menu"><i class="fas fa-bars"></i></div>
+      <div class="logo">
+        <h2 class="logo-h2">Phase Shift</h2>
+        <p class="logo-p">by TEMPLATED</p>
+      </div>
 
-            <div class="logo">
-                <h2 class="logo-h2">Phase Shift</h2>
-                <p class="logo-p">by TEMPLATED</p>
+      <nav id="nav">
+        <ul>
+          <li>Homepage</li>
+          <li>Left Sidebar</li>
+          <li>Right Sidebar</li>
+          <li>No Sidebar</li>
+        </ul>
+      </nav>
+    </header>
+
+    <div class="wrapper">
+      <div class="banner">
+        <p>
+          This is <strong>Phase Shift</strong>, a responsive HTML5 site template
+          freebie by <a href="https://templated.co/">TEMPLATED</a>. Released for
+          free under the
+          <a href="https://templated.co/license"
+            >Creative Commons Attribution</a
+          >
+          license, so use it for whatever (personal or commercial) – just give
+          us credit! Check out more of our stuff at
+          <a href="https://templated.co/">our site</a> or follow us on
+          <a href="https://twitter.com/templatedco">Twitter</a>.
+        </p>
+
+        <div class="banner-btn btn">READ MORE</div>
+      </div>
+
+      <!--MAIN CONTENT-->
+
+      <div class="main">
+        <div class="container">
+          <div class="row row-main">
+            <div class="col-12 col-sm-6 col-md-4 col-lg-4">
+              <div class="img-container">
+                <img
+                  class="main-img"
+                  src="https://templated.co/items/demos/phaseshift/images/pic01.jpg"
+                  alt="flowers"
+                />
+              </div>
+              <div class="content-text">
+                <p>
+                  Donec leo, vivamus fermentum nibh in augue praesent a lacus at
+                  urna congue rutrum wisi maecenas ligula.
+                </p>
+                <div class="main-btn btn">READ MORE</div>
+              </div>
             </div>
 
-            <nav id="nav">
-                <ul>
-                    <li>Homepage</li>
-                    <li>Left Sidebar</li>
-                    <li>Right Sidebar</li>
-                    <li>No Sidebar</li>
-                </ul>
-            </nav>
-
-        </header>
-
-        <div class="wrapper">
-
-
-            <div class="banner">
-                <p>Lorem ipsum <strong>PhaseShift</strong> dolor sit amet, consectetur adipiscing elit. Pellentesque lectus nunc, fermentum et lacinia pulvinar, hendrerit sit amet purus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac.</p>
-
-                <div class="banner-btn">READ MORE</div>
+            <div class="col-12 col-sm-6 col-md-4 col-lg-4">
+              <div class="img-container">
+                <img
+                  class="main-img"
+                  src="https://templated.co/items/demos/phaseshift/images/pic02.jpg"
+                  alt="flowers"
+                />
+              </div>
+              <div class="content-text">
+                <p>
+                  Donec leo, vivamus fermentum nibh in augue praesent a lacus at
+                  urna congue rutrum wisi maecenas ligula.
+                </p>
+                <div class="main-btn btn">READ MORE</div>
+              </div>
             </div>
 
+            <div class="col-12 col-sm-6 col-md-4 col-lg-4">
+              <div class="img-container">
+                <img
+                  class="main-img"
+                  src="https://templated.co/items/demos/phaseshift/images/pic03.jpg"
+                  alt="flowers"
+                />
+              </div>
+              <div class="content-text">
+                <p>
+                  Donec leo, vivamus fermentum nibh in augue praesent a lacus at
+                  urna congue rutrum wisi maecenas ligula.
+                </p>
+                <div class="main-btn btn">READ MORE</div>
+              </div>
+            </div>
 
-            
-            <!--MAIN CONTENT-->
+            <div class="col-12 col-sm-6 col-md-4 col-lg-4">
+              <div class="img-container">
+                <img
+                  class="main-img"
+                  src="https://templated.co/items/demos/phaseshift/images/pic01.jpg"
+                  alt="flowers"
+                />
+              </div>
+              <div class="content-text">
+                <p>
+                  Donec leo, vivamus fermentum nibh in augue praesent a lacus at
+                  urna congue rutrum wisi maecenas ligula.
+                </p>
+                <div class="main-btn btn">READ MORE</div>
+              </div>
+            </div>
 
+            <div class="col-12 col-sm-6 col-md-4 col-lg-4">
+              <div class="img-container">
+                <img
+                  class="main-img"
+                  src="https://templated.co/items/demos/phaseshift/images/pic02.jpg"
+                  alt="flowers"
+                />
+              </div>
 
-            <div class="main">
-                <div class="container">
-                    <div class="row row-main"> 
-                        <div class="col-12 col-sm-6 col-md-4 col-lg-4">
-                            <div class="img-container">
-                                <img class="main-img" src="https://templated.co/items/demos/phaseshift/images/pic01.jpg" alt="flowers">
-                            </div>
-                            <div class="content-text">
-                                <p>Donec leo, vivamus fermentum nibh in augue praesent a lacus at urna congue rutrum wisi maecenas ligula.</p>
-                                <div class="main-btn">READ MORE</div>
-                            </div>
-                        </div>
+              <div class="content-text">
+                <p>
+                  Donec leo, vivamus fermentum nibh in augue praesent a lacus at
+                  urna congue rutrum wisi maecenas ligula.
+                </p>
+                <div class="main-btn btn">READ MORE</div>
+              </div>
+            </div>
 
-                        <div class="col-12 col-sm-6 col-md-4 col-lg-4">
-                            <div class="img-container">
-                                <img class="main-img" src="https://templated.co/items/demos/phaseshift/images/pic02.jpg" alt="flowers">
-                            </div>
-                            <div class="content-text">
-                                <p>Donec leo, vivamus fermentum nibh in augue praesent a lacus at urna congue rutrum wisi maecenas ligula.</p>
-                                <div class="main-btn">READ MORE</div>
-                            </div>
-                        </div>
+            <div class="col-12 col-sm-6 col-md-4 col-lg-4">
+              <div class="img-container">
+                <img
+                  class="main-img"
+                  src="https://templated.co/items/demos/phaseshift/images/pic03.jpg"
+                  alt="flowers"
+                />
+              </div>
+              <div class="content-text">
+                <p>
+                  Donec leo, vivamus fermentum nibh in augue praesent a lacus at
+                  urna congue rutrum wisi maecenas ligula.
+                </p>
+                <div class="main-btn btn">READ MORE</div>
+              </div>
+            </div>
+          </div>
 
-                        <div class="col-12 col-sm-6 col-md-4 col-lg-4">
-                            <div class="img-container">
-                                <img class="main-img" src="https://templated.co/items/demos/phaseshift/images/pic03.jpg" alt="flowers">
-                            </div>
-                            <div class="content-text">
-                                <p>Donec leo, vivamus fermentum nibh in augue praesent a lacus at urna congue rutrum wisi maecenas ligula.</p>
-                                <div class="main-btn">READ MORE</div>
-                            </div>
-                        </div>
+          <!--EXTRA-CONTENT-->
 
-                        <div class="col-12 col-sm-6 col-md-4 col-lg-4">
-                            <div class="img-container">
-                                <img class="main-img" src="https://templated.co/items/demos/phaseshift/images/pic01.jpg" alt="flowers">
-                            </div>
-                            <div class="content-text">
-                                <p>Donec leo, vivamus fermentum nibh in augue praesent a lacus at urna congue rutrum wisi maecenas ligula.</p>
-                                <div class="main-btn">READ MORE</div>
-                            </div>
-                        </div>
-
-                        <div class="col-12 col-sm-6 col-md-4 col-lg-4">
-                            <div class="img-container">
-                                <img class="main-img" src="https://templated.co/items/demos/phaseshift/images/pic02.jpg" alt="flowers">
-                            </div>
-
-                            <div class="content-text">
-                                <p>Donec leo, vivamus fermentum nibh in augue praesent a lacus at urna congue rutrum wisi maecenas ligula.</p>
-                                <div class="main-btn">READ MORE</div>
-                            </div>
-                        </div>
-
-                        <div class="col-12 col-sm-6 col-md-4 col-lg-4">
-                            <div class="img-container">
-                                <img class="main-img" src="https://templated.co/items/demos/phaseshift/images/pic03.jpg" alt="flowers">
-                            </div>
-                            <div class="content-text">
-                                <p>Donec leo, vivamus fermentum nibh in augue praesent a lacus at urna congue rutrum wisi maecenas ligula.</p>
-                                <div class="main-btn">READ MORE</div>
-                            </div>
-                        </div>
-                    </div>
-
-
-                <!--EXTRA-CONTENT-->
-
-
-                    <div class="row row-extra">
-                        
-                            <div class="col-md-6">
-                                <article class="integer1" id="integer">
-                                    <div class="icon"><i class="fas fa-wrench"></i></div>
-                                    <div class="extra-text">
-                                        <h1>INTEGER ULTRICES</h1>
-                                        <p>In posuere eleifend odio. Quisque semper augue mattis wisi. Maecenas ligula. Pellentesque viverra vulputate enim. Aliquam erat volutpat. Maecenas condimentum enim tincidunt risus accumsan.</p>
-                                    </div>
-                                </article>
-                            </div>
-
-                            <div class="col-md-6">
-                                <article class="aliquam1" id="aliquam">
-                                    <div class="icon"><i class="fas fa-leaf"></i></div>
-                                    <div class="extra-text">
-                                        <h1>ALIQUAM LUCTUS</h1>
-                                        <p>In posuere eleifend odio. Quisque semper augue mattis wisi. Maecenas ligula. Pellentesque viverra vulputate enim. Aliquam erat volutpat. Maecenas condimentum enim tincidunt risus accumsan.</p>
-                                    </div>
-                                </article>
-                            </div>
-
-
-
-                            <div class="col-md-6">
-                                <article id="integer">
-                                    <div class="icon"><i class="fas fa-cogs"></i></div>
-                                    <div class="extra-text">
-                                        <h1>INTEGER ULTRICES</h1>
-                                        <p>In posuere eleifend odio. Quisque semper augue mattis wisi. Maecenas ligula. Pellentesque viverra vulputate enim. Aliquam erat volutpat. Maecenas condimentum enim tincidunt risus accumsan.</p>
-                                    </div>
-                                </article>
-                            </div>
-
-                            <div class="col-md-6">
-                                <article id="aliquam">
-                                    <div class="icon"><i class="fas fa-road"></i></div>
-                                    <div class="extra-text">
-                                        <h1>ALIQUAM LUCTUS</h1>
-                                        <p>In posuere eleifend odio. Quisque semper augue mattis wisi. Maecenas ligula. Pellentesque viverra vulputate enim. Aliquam erat volutpat. Maecenas condimentum enim tincidunt risus accumsan.</p>
-                                    </div>
-                                </article>
-                            </div>
-                    </div>
+          <div class="row row-extra">
+            <div class="col-md-6">
+              <article class="integer1" id="integer">
+                <div class="icon"><i class="fas fa-wrench"></i></div>
+                <div class="extra-text">
+                  <h1>INTEGER ULTRICES</h1>
+                  <p>
+                    In posuere eleifend odio. Quisque semper augue mattis wisi.
+                    Maecenas ligula. Pellentesque viverra vulputate enim.
+                    Aliquam erat volutpat. Maecenas condimentum enim tincidunt
+                    risus accumsan.
+                  </p>
                 </div>
+              </article>
             </div>
 
-
-            <!--FORM-->
-
-
-            <div class="form-container">
-                <h1>MAURIS VULPUTATE DOLOR</h1>
-                <p>INTEGER SIT AMET PEDE VEL ARCU ALIQUET PRETIUM</p>
-
-                <form>
-                    <input type="text" name="name" id="name" placeholder="Name">
-                    <input type="email" name="email" id="email" placeholder="Email">
-                    <textarea rows="9" id="message" placeholder="Message"></textarea>
-                    <div class="form-btn">SEND MESSAGE</div>
-                </form>
-            </div>
-
-
-
-            <!--FOOTER-->
-
-
-            <footer>
-                <div class="footer-container">
-                    <p>Design: <a href="https://templated.co/license">TEMPLATED</a> Images: <a href="https://unsplash.com/">Unsplash</a> (<a href="https://unsplash.com/@cc0">CC0</a>)</p>
-                    <ul>
-                        <li><a href="https://en-gb.facebook.com/"><i class="fab fa-facebook-f"></i></a></li>
-                        <li><a href="https://twitter.com/?lang=en-gb"><i class="fab fa-twitter"></i></a></li>
-                        <li><a href="chrome://welcome/"><i class="fab fa-google-plus-g"></i></a></li>
-                    </ul>
+            <div class="col-md-6">
+              <article class="aliquam1" id="aliquam">
+                <div class="icon"><i class="fas fa-leaf"></i></div>
+                <div class="extra-text">
+                  <h1>ALIQUAM LUCTUS</h1>
+                  <p>
+                    In posuere eleifend odio. Quisque semper augue mattis wisi.
+                    Maecenas ligula. Pellentesque viverra vulputate enim.
+                    Aliquam erat volutpat. Maecenas condimentum enim tincidunt
+                    risus accumsan.
+                  </p>
                 </div>
-            </footer>
+              </article>
+            </div>
+
+            <div class="col-md-6">
+              <article id="integer">
+                <div class="icon"><i class="fas fa-cogs"></i></div>
+                <div class="extra-text">
+                  <h1>INTEGER ULTRICES</h1>
+                  <p>
+                    In posuere eleifend odio. Quisque semper augue mattis wisi.
+                    Maecenas ligula. Pellentesque viverra vulputate enim.
+                    Aliquam erat volutpat. Maecenas condimentum enim tincidunt
+                    risus accumsan.
+                  </p>
+                </div>
+              </article>
+            </div>
+
+            <div class="col-md-6">
+              <article id="aliquam">
+                <div class="icon"><i class="fas fa-road"></i></div>
+                <div class="extra-text">
+                  <h1>ALIQUAM LUCTUS</h1>
+                  <p>
+                    In posuere eleifend odio. Quisque semper augue mattis wisi.
+                    Maecenas ligula. Pellentesque viverra vulputate enim.
+                    Aliquam erat volutpat. Maecenas condimentum enim tincidunt
+                    risus accumsan.
+                  </p>
+                </div>
+              </article>
+            </div>
+          </div>
         </div>
+      </div>
 
+      <!--FORM-->
 
-    </body>
+      <div class="form-container">
+        <h1>MAURIS VULPUTATE DOLOR</h1>
+        <p>INTEGER SIT AMET PEDE VEL ARCU ALIQUET PRETIUM</p>
+
+        <form>
+          <input type="text" name="name" id="name" placeholder="Name" />
+          <input type="email" name="email" id="email" placeholder="Email" />
+          <textarea rows="9" id="message" placeholder="Message"></textarea>
+          <div class="form-btn">SEND MESSAGE</div>
+        </form>
+      </div>
+
+      <!--FOOTER-->
+
+      <footer>
+        <div class="footer-container">
+          <p>
+            Design: <a href="https://templated.co/license">TEMPLATED</a> Images:
+            <a href="https://unsplash.com/">Unsplash</a> (<a
+              href="https://unsplash.com/@cc0"
+              >CC0</a
+            >)
+          </p>
+          <ul>
+            <li>
+              <a href="https://en-gb.facebook.com/"
+                ><i class="fab fa-facebook-f"></i
+              ></a>
+            </li>
+            <li>
+              <a href="https://twitter.com/?lang=en-gb"
+                ><i class="fab fa-twitter"></i
+              ></a>
+            </li>
+            <li>
+              <a href="chrome://welcome/"
+                ><i class="fab fa-google-plus-g"></i
+              ></a>
+            </li>
+          </ul>
+        </div>
+      </footer>
+    </div>
+  </body>
 </html>
